# httptrading

./: LICENSE  README.md  pyproject.toml
httptrading/: __init__.py  http_server.py  model.py
httptrading/broker/: base.py  futu.py  futu_sec.py  interactive_brokers.py  longbridge.py  tiger.py
httptrading/tool/: leaky_bucket.py  locate.py  time.py
